give quote-box-author min-height to prevent scrollbar

--- a/styles/_quotebox.scss
+++ b/styles/_quotebox.scss
@@ -22,11 +22,9 @@
 .text-wrapper {
   align-self: center;
   overflow-y: auto;
-  min-height: 4em;
   max-height: 250px;
 
   @include mq(500px) {
-    min-height: 6em;
     max-height: 380px;
   }
 }
@@ -58,6 +56,7 @@
   font-size: 1rem;
   text-align: right;
   margin-top: 0.25em;
+  min-height: 1.5em;
 
   @include mq(500px) {
     font-size: 1.4rem;
